# Downfacing-VIO

./: .gitignore  README.md
orb_gap9_project/: CMakeLists.txt  main.c
orb_gap9_project/feature_handling/: bf_matcher.c  bf_matcher.h  orb.c  orb.h  orb_bit_pattern.h  orb_gap.c  orb_gap.h
px4flow_gap9_project/: CMakeLists.txt  main.c
px4flow_gap9_project/px4flow/: flow.c  flow.h  motion_histogram.c  motion_histogram.h
sensor_data/sample_data/: img_timestamps.txt  imu_measurements.h  start_stop_indices.h  tof_measurements.h
sensor_data/sample_data/images/: frame000000.pgm  frame000001.pgm  frame000002.pgm  frame000003.pgm  frame000004.pgm  frame000005.pgm  frame000006.pgm  frame000007.pgm  frame000008.pgm  frame000009.pgm  frame000010.pgm  frame000011.pgm  frame000012.pgm  frame000013.pgm  frame000014.pgm  frame000015.pgm  frame000016.pgm  frame000017.pgm  frame000018.pgm  frame000019.pgm  frame000020.pgm  frame000021.pgm  frame000022.pgm  frame000023.pgm  frame000024.pgm  frame000025.pgm  frame000026.pgm  frame000027.pgm  frame000028.pgm  frame000029.pgm  frame000030.pgm  frame000031.pgm  frame000032.pgm  frame000033.pgm  frame000034.pgm  frame000035.pgm  frame000036.pgm  frame000037.pgm  frame000038.pgm  frame000039.pgm  (+2960 more)
superpoint_gap9_project/: CMakeLists.txt  nntool_generate_model.py  sdk.config  superpoint.c  superpoint.h
superpoint_gap9_project/calibration_data/: frame000114.pgm  frame000396.pgm  frame000541.pgm  frame000770.pgm  frame003610.pgm  frame003851.pgm  frame004011.pgm  frame008050.pgm  frame010514.pgm  frame010516.pgm  frame010580.pgm  frame010586.pgm  frame010677.pgm  frame010787.pgm  frame011014.pgm  frame011851.pgm  frame011913.pgm  frame012444.pgm  frame015074.pgm  frame015091.pgm  frame015371.pgm  frame015716.pgm  frame015860.pgm
superpoint_gap9_project/superpoint/: postprocessing.c  postprocessing.h
utility/extended_kalman_filter/: of_imu_ekf.c  of_imu_ekf.h
utility/img_feature_definitions/: img_feature_definitions.h
utility/rigid_body_motion/: rigid_body_motion.c  rigid_body_motion.h
